--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,7 +1,9 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?tdozoxkly#1" target="_blank">首页</a> | <a href="https://dtfavhq5d1ym2.cloudfront.net/1?mmuytolq" target="_blank">动态网</a> | <a href="https://d1ed4zj8eeit74.cloudfront.net/2?lvdjjo" target="_blank">大纪元</a> | <a href="https://dylb6p9h9pzya.cloudfront.net/4?ihpqddv" target="_blank">看中国</a> | <a href="https://dnfbwsos78njn.cloudfront.net/pHh5q?zesedtg" target="_blank">新生网</a> | <a href="https://dl1ez95kskssm.cloudfront.net/tktpt?bxahp" target="_blank">阿波罗网</a> | <a href="https://d3asbsenpgs1fq.cloudfront.net/Mjpvu?vfaaulo" target="_blank">干净世界</a> | <a href="https://djwddd4nnr0na.cloudfront.net/10?lqppwmnb" target="_blank">退党服务</a> | <a href="https://d22owz1tif1d5u.cloudfront.net/Rffqf?fvtgq" target="_blank">明慧广播</a> | <a href="https://d2oemtubh889hy.cloudfront.net/nw9Vn?vqlhleht" target="_blank">传奇时代</a> | <a href="https://d8jw662akk94j.cloudfront.net/AF9AG?ejsagc" target="_blank">新境界影视</a> | <a href="https://d1bfxyb2xiiyyy.cloudfront.net/zqMQA?omsyibuy" target="_blank">文昭谈论</a> | <a href="https://d259d2wq6kf78s.cloudfront.net/7?nvdeylasc" target="_blank">明慧</a></p><p><a href="https://doqmgyop4u892.cloudfront.net/9?fuglqqwr" target="_blank">大法</a> | <a href="https://dep6yudto3kbo.cloudfront.net/3?gwvlbzoqd" target="_blank">新唐人</a> | <a href="https://d1uqjs1ubkxo6.cloudfront.net/obAhT?lmkmeiaxl" target="_blank">人民报</a> | <a href="https://d3frzobj0kj0md.cloudfront.net/xXNHu?lqwwhejkv" target="_blank">放光明</a> | <a href="https://d2s9nucg9xc8yr.cloudfront.net/5?lmtrzmoge" target="_blank">新纪元</a> | <a href="https://dh48pl2d5tlkv.cloudfront.net/6?qylwtbuig" target="_blank">希望之声</a> | <a href="https://d2zvse34bag8ol.cloudfront.net/11?bhcjsfd" target="_blank">无界网络</a> | <a href="https://d2tha3bwxphnwp.cloudfront.net/Pueji?yzobbwu" target="_blank">追查国际</a> | <a href="https://d2zw89wk00y815.cloudfront.net/16?qvksbxbmw" target="_blank">明慧之窗</a> | <a href="https://d3malt9gyhsmb.cloudfront.net/LdvzZ?twflanlt" target="_blank">细语人生</a> | <a href="https://d53tcmkdq4r1q.cloudfront.net/fBn3r?prcfzbxd" target="_blank">新世纪影视</a> | <a href="https://dld25pfif4r64.cloudfront.net/PUWMb?rwyklr" target="_blank">江峰时刻</a> | <a href="https://d2gp1icp8dv5pn.cloudfront.net/8?wcvntzzqc" target="_blank">正见</a></p></td></tr>
-<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/26/1/28/n14685743.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2016/03/1603202251072052-320x200.jpg"><p align="center">价格低寿命长的25款新车 本田Civic最实惠</p></a>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?nfhsghomm#1" target="_blank">首页</a> | <a href="https://d2nbk5p6zab41i.cloudfront.net/1?dhcxt" target="_blank">动态网</a> | <a href="https://d17bhfsmf5ovpz.cloudfront.net/2?jwjhuqs" target="_blank">大纪元</a> | <a href="https://dkx26vh7i5y84.cloudfront.net/4?lbvqu" target="_blank">看中国</a> | <a href="https://d200ccn4ewjn2r.cloudfront.net/pHh5q?tpvpr" target="_blank">新生网</a> | <a href="https://doh73o6c3dnba.cloudfront.net/tktpt?jbhqorir" target="_blank">阿波罗网</a> | <a href="https://d2p9r31ubb8t81.cloudfront.net/Mjpvu?sjbjrqr" target="_blank">干净世界</a> | <a href="https://dsqxb3b7muii1.cloudfront.net/10?tthap" target="_blank">退党服务</a> | <a href="https://d2cdd2sap6vl0o.cloudfront.net/Rffqf?usgobfuof" target="_blank">明慧广播</a> | <a href="https://dtfavhq5d1ym2.cloudfront.net/nw9Vn?wrhazs" target="_blank">传奇时代</a> | <a href="https://d1bfxyb2xiiyyy.cloudfront.net/AF9AG?bvipzj" target="_blank">新境界影视</a> | <a href="https://d2oemtubh889hy.cloudfront.net/zqMQA?qqnto" target="_blank">文昭谈论</a> | <a href="https://d3caox32lipp7h.cloudfront.net/7?pzwrevd" target="_blank">明慧</a></p><p><a href="https://dwpf34pf0p4a8.cloudfront.net/9?ljbjcvkzf" target="_blank">大法</a> | <a href="https://d3bo5docy69ast.cloudfront.net/3?kqwgowez" target="_blank">新唐人</a> | <a href="https://d3uam2jhpjrvu5.cloudfront.net/obAhT?withw" target="_blank">人民报</a> | <a href="https://dvsmtoxipy5i5.cloudfront.net/xXNHu?evkkwmsv" target="_blank">放光明</a> | <a href="https://d3c3t179l61pwn.cloudfront.net/5?vkpgh" target="_blank">新纪元</a> | <a href="https://d10efcw5kfoez9.cloudfront.net/6?wxkim" target="_blank">希望之声</a> | <a href="https://d3t1om6knkjnq4.cloudfront.net/11?hualvyzc" target="_blank">无界网络</a> | <a href="https://d12ogqhrsnt8ma.cloudfront.net/Pueji?clswz" target="_blank">追查国际</a> | <a href="https://ddtx9y1vir8bp.cloudfront.net/16?unxzyp" target="_blank">明慧之窗</a> | <a href="https://d2tkl2xkgbxyfv.cloudfront.net/LdvzZ?ptnvms" target="_blank">细语人生</a> | <a href="https://d2wjsqtecmbuag.cloudfront.net/fBn3r?rgxwuowu" target="_blank">新世纪影视</a> | <a href="https://d3q99y09eaol9n.cloudfront.net/PUWMb?rmcnayfwz" target="_blank">江峰时刻</a> | <a href="https://dkx26vh7i5y84.cloudfront.net/8?olpdcxv" target="_blank">正见</a></p></td></tr>
+<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689047.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2026/02/id14688758-220728-O-CA231-2003C--320x200.jpeg"><p align="center">美军庞大舰队逼近伊朗 释放两大信号</p></a>
+<a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689047.md#1" title="美军庞大舰队逼近伊朗 释放两大信号""><img width="73" src="https://i.epochtimes.com/assets/uploads/2026/02/id14688758-220728-O-CA231-2003C--320x200.jpeg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/28/n14685743.md#1" title="价格低寿命长的25款新车 本田Civic最实惠""><img width="73" src="https://i.epochtimes.com/assets/uploads/2016/03/1603202251072052-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14689005.md#1" title="【专访】制片人谈《梅拉尼娅》拍摄内幕""><img width="73" src="https://i.epochtimes.com/assets/uploads/2026/02/id14689016-GettyImages-2258947147-LS-1080x720-1-320x200.webp">&nbsp;</a>
+<a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689057.md#1" title="神韵伯恩茅斯六场全爆满 观众：心灵获启迪""><img width="73" src="https://i.epochtimes.com/assets/uploads/2026/02/id14689074-260201125702100869-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688959.md#1" title="中共二十大后18名上将被查20上将“失踪”""><img width="73" src="https://i.epochtimes.com/assets/uploads/2026/01/id14687458-GettyImages-2202765589-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688889.md#1" title="德州选举 民主党人成功翻盘获州参议员席位""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/07/id13103659-Canon-EOS-70D-3648x2432_000072-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/22/n14681521.md#1" title="进化骗局(7) 北京“猿人”的高超骗术""><img width="73" src="https://i.epochtimes.com/assets/uploads/2026/01/id14681539-jinhuapianju07-320x200.jpg">&nbsp;</a>
@@ -10,19 +12,17 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687777.md#1" title="钟原：中共政治局开会 军报发异常信号""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/10/id14618493-GettyImages-2232832356-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/24/n14682916.md#1" title="5款低调奢华单品 中产阶级也能买得起""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/11/id13363458-shutterstock_794815816-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688762.md#1" title="美外交特使抵达委内瑞拉 双边关系正逐步恢复""><img width="73" src="https://i.epochtimes.com/assets/uploads/2026/02/id14688767-HABD4DvXsAAqc5o-320x200.jpeg">&nbsp;</a>
-<a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688651.md#1" title="日本英国首相会晤：深化矿产及安全纽带""><img width="73" src="https://i.epochtimes.com/assets/uploads/2026/02/id14688679-AFP__20260131__94NG38C__v1__HighRes__JapanBritainDiplomacy-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14687992.md#1" title="为何伊朗监视系统难确定林肯号航母位置""><img width="73" src="https://i.epochtimes.com/assets/uploads/2026/01/id14688086-9458420-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>1分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689112.md#1">军报吁官兵识大势 当局查张又侠疑遭抵制</a><br>
-:clock8: <em>10分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689153.md#1">洛杉矶警方：因安全考量 拟不执行禁蒙面法</a><br>
-:clock8: <em>16分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689056.md#1">川普宣布肯尼迪中心将关闭两年全面整修</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689048.md#1">纽约市公校将公布使用AI新规范</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689050.md#1">积雪未清让市民不满 纽约市府紧急招募铲雪临时工</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689098.md#1">日本大选民调：高市执政联盟有望大胜</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689105.md#1">追思台湾会馆前理事长方秀蓉 赖清德颁发褒扬令</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689094.md#1">法拉盛失踪4日的华裔少女 在凯辛娜高尔夫球场附近被发现死亡</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689095.md#1">布碌崙华男走私逾850只海龟被判入狱两年</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689072.md#1">武汉地铁工地龙门吊倒塌 砸中车辆致1死1伤</a><br>
+:clock8: <em>13分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689047.md#1">美军庞大舰队逼近伊朗 释放两大信号</a><br>
+:clock8: <em>15分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689152.md#1">土耳其一客运巴士冲出路面翻覆 酿9死26伤</a><br>
+:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689112.md#1">军报吁官兵识大势 当局查张又侠疑遭抵制</a><br>
+:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689153.md#1">洛杉矶警方：因安全考量 拟不执行禁蒙面法</a><br>
+:clock8: <em>36分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689056.md#1">川普宣布肯尼迪中心将关闭两年全面整修</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689048.md#1">纽约市公校将公布使用AI新规范</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689050.md#1">积雪未清让市民不满 纽约市府紧急招募铲雪临时工</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689098.md#1">日本大选民调：高市执政联盟有望大胜</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689105.md#1">追思台湾会馆前理事长方秀蓉 赖清德颁发褒扬令</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689094.md#1">法拉盛失踪4日的华裔少女 在凯辛娜高尔夫球场附近被发现死亡</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14687999.md#1">军方缺席中共政治局会议 专家析内讧后遗症</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688147.md#1">中共吁官兵支持处理张又侠 被指证军心不稳</a><br>
@@ -108,8 +108,8 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/24/n14683035.md#1">实战派张又侠刘振立落马 分析：重创中共军力</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/24/n14682758.md#1">柳岩主演《金刚不坏》 上映48天票房仅70万</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/26/1/22/n14681874.md#1">分析：中共加速清除裸官 泄政权倾覆焦虑</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d1gg452ho7h2us.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d1gg452ho7h2us.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d1gg452ho7h2us.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d1gg452ho7h2us.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d1gg452ho7h2us.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d1gg452ho7h2us.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d1gg452ho7h2us.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d1gg452ho7h2us.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d1gg452ho7h2us.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d1gg452ho7h2us.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d1gg452ho7h2us.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d1gg452ho7h2us.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d1gg452ho7h2us.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d1gg452ho7h2us.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d1gg452ho7h2us.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d1gg452ho7h2us.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d1gg452ho7h2us.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d1gg452ho7h2us.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d1gg452ho7h2us.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d1gg452ho7h2us.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d1gg452ho7h2us.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d1gg452ho7h2us.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d1gg452ho7h2us.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d1gg452ho7h2us.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d1gg452ho7h2us.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d1gg452ho7h2us.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 42,520</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d1ienos8l16kd7.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d1ienos8l16kd7.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d1ienos8l16kd7.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d1ienos8l16kd7.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d1ienos8l16kd7.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d1ienos8l16kd7.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d1ienos8l16kd7.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d1ienos8l16kd7.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d1ienos8l16kd7.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d1ienos8l16kd7.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d1ienos8l16kd7.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d1ienos8l16kd7.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d1ienos8l16kd7.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d1ienos8l16kd7.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d1ienos8l16kd7.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d1ienos8l16kd7.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d1ienos8l16kd7.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d1ienos8l16kd7.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d1ienos8l16kd7.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d1ienos8l16kd7.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d1ienos8l16kd7.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d1ienos8l16kd7.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d1ienos8l16kd7.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d1ienos8l16kd7.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d1ienos8l16kd7.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d1ienos8l16kd7.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 42,520</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
@@ -123,12 +123,12 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/25/3/25/n14466392.md#1">【内幕】中国大基建如何成为贪腐提款机</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/3/20/n14462776.md#1">【内幕】李嘉诚卖巴拿马港口涉中共高层政争</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/3/7/n14453270.md#1">【独家】防火墙下的博弈 中国多少人在翻墙</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638268.md#1">走过黎明前黑暗的年代（下）</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/25/11/5/n14630165.md#1">【古道人生】坠水失踪二十年 原来去了桃花源</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/25/9/1/n14585025.md#1">【洪秀全传】（1）晚清政论预言</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639204.md#1">修女画家普劳蒂拉?内莉的《最后的晚餐》</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/25/11/9/n14632198.md#1">独立天地间：鲁仲连的高士风骨</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/25/4/6/n14476164.md#1">从故事学典故：范增举玦 羊祜探环</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/25/11/16/n14636773.md#1">小雪节气天气上升地气下降  不要掉以轻心</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638279.md#1">《论语》说（98）：勇敢的子路为何怕闻道理？</a><br>
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646583.md#1">“退让”是软弱吗？炫耀者为何感到羞愧？</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/25/12/11/n14653064.md#1">【未解之谜】森林小仙女预言地球未来</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/25/12/11/n14653060.md#1">2025年新唐人全世界人物写实油画大赛入围作品赏析——《寡妇的两文钱》</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651758.md#1">圣墓之旅：耶路撒冷圣地珍宝闪亮纽约</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/25/5/10/n14504111.md#1">唐代文明史?美术</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643889.md#1">婚姻幸福之道：阴阳平衡 琴瑟和鸣</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645020.md#1">春秋五霸楚庄王为何能一鸣惊人一飞冲天？</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/25/5/3/n14497653.md#1">【品读唐诗】千古绝唱 元稹悼亡诗</a><br>
 <br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/1992513/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="371"><h2><p><strong>大纪元重要书籍</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/nf3541.md#1" target="_blank">《九评共产党》</a><br><a href="https://github.com/1992513/djy/blob/master/gb/nf1235328.md#1" target="_blank">《共产主义的终极目的》</a><br><a href="https://github.com/1992513/djy/blob/master/gb/nf1267582.md#1" target="_blank">《魔鬼在统治着我们的世界》</a><br><a href="https://github.com/1992513/djy/blob/master/gb/nf3628.md#1" target="_blank">《解体党文化》</a><br><a href="https://github.com/1992513/djy/blob/master/gb/nf1242535.md#1" target="_blank">《真实的江泽民》</a><br><a href="https://github.com/1992513/djy/blob/master/gb/nf1138304.md#1" target="_blank">《中国历史正述》</a><br><a href="https://github.com/1992513/djy/blob/master/gb/nf1076978.md#1" target="_blank">《千古英雄人物》</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf3046.md#1">更多......</a></p></td></tr></table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1<br><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/nf1351518.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf1351518.htm">https://www.epochtimes.com/gb/nf1351518.htm</a>    （国内需<a href="https://github.com/1992513/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
